# preswald

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  notes.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  user_script.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  example_request.md  feature_request.md  test_request.md
.github/workflows/: deployment_autotests.yaml  pre-release.yml  release.yml
community_gallery/SP500/: hello.py  preswald.toml
community_gallery/Weather_Sample_Assessment/: README.md  hello.py  preswald.toml
community_gallery/air-quality/: README.md  hello.py  preswald.toml
community_gallery/airbnb/: hello.py
community_gallery/computer_games_2018/: README.md  hello.py  preswald.toml
community_gallery/conflict-rocks/: README.md  hello.py  preswald.toml  pyproject.toml  vps_entry.sh
community_gallery/disasters/: hello.py  preswald.toml
community_gallery/earthquakes/: hello.py  preswald.toml  pyproject.toml
community_gallery/english-premier-league/: README.md  hello.py  preswald.toml
community_gallery/f1-drivers/: hello.py  preswald.toml
community_gallery/fifa23/: hello.py  preprocess.py  preswald.toml  secrets.toml
community_gallery/finance/: preswald.toml  pyproject.toml
community_gallery/fires/: hello.py  mapdataall.csv  preswald.toml
community_gallery/health/: README.md  preswald.toml  pyproject.toml
community_gallery/imdb-movie-ratings/: README.md  hello.py  preswald.toml
community_gallery/iris/: hello.py
community_gallery/methane_emission_landfill/: hello.py  preswald.toml  process.py
community_gallery/mobiles/: hello.py  preswald.toml
community_gallery/music/: README.md  hello.py
community_gallery/netflix/: README.md  preswald.toml
community_gallery/network/: data.csv
community_gallery/penguins/: hello.py
community_gallery/pixar_films/: hello.py  preswald.toml
community_gallery/pixarfilms/: hello.py  preswald.toml
community_gallery/real_estate/: README.md  hello.py
community_gallery/seattle_weather/: hello.py
community_gallery/sf-salaries/: README.md  hello.py
community_gallery/social-media-trends/: README.md  hello.py  preswald.toml
community_gallery/song_popularity/: README.md  preswald.toml
community_gallery/stack_overflow_developer_trends/: README.md  app.py  preswald.toml
community_gallery/startup/: hello.py  preswald.toml
community_gallery/titanic/: README.md  hello.py
community_gallery/travel/: preswald.toml
community_gallery/voice/: preswald.toml  pyproject.toml
community_gallery/weather/: hello.py
community_gallery/wine-quality/: .gitignore  hello.py
docker/: entrypoint.sh  preswald.Dockerfile  preswald_app.Dockerfile
docker/test/: iris_app.Dockerfile  voice_app.Dockerfile
docs/: CNAME  LICENSE  README.md  addnewcomponent.mdx  bitflip.html  configuration.mdx  contributing.mdx  coreconcepts.mdx  docs.json  index.html  introduction.mdx  mint.json  quickstart.mdx  styles.css
docs/assets/: site.webmanifest
docs/cli/: deploy.mdx  deployments.mdx  export.mdx  init.mdx  run.mdx  stop.mdx
docs/data/: get_df.mdx
docs/deprecated/: progress.mdx
docs/displays/: image.mdx  matplotlib.mdx  table.mdx
docs/layout/: guide.mdx  sidebar.mdx  sizing.mdx
docs/sdk/: alert.mdx  button.mdx  chat.mdx  checkbox.mdx  connect.mdx  fastplotlib.mdx  get_df.mdx  matplotlib.mdx  playground.mdx  plotly.mdx  progress.mdx  query.mdx  retrypolicy.mdx  selectbox.mdx  separator.mdx  sidebar.mdx  slider.mdx  table.mdx  text.mdx  text_input.mdx  topbar.mdx  workflow.mdx  workflow_analyzer.mdx  workflow_dag.mdx
docs/usage/: examples.mdx  troubleshooting.mdx
docs/workflow/: workflow.mdx  workflow_dag.mdx
documentation/: configuration.mdx  introduction.mdx  quickstart.mdx
documentation/cli/: init.mdx  tutorial.mdx
documentation/controls/: slider.mdx
documentation/deprecated/: separator.mdx  spinner.mdx
documentation/usage/: examples.mdx
examples/: data_viewer.py  demo.py  example_workflow.py  hello_world.py  interactive_demo.py  test.py
examples/AirQuality/: README.md  hello.py  preswald.toml
examples/SP500/: README.md  hello.py
examples/air-quality/: hello.py
examples/airbnb/: README.md  hello.py  preswald.toml
examples/airquality/: hello.py  preswald.toml
examples/airquality2/: README.md  hello.py
examples/california_fires/: config.toml  hello.py
examples/computer_games_2018/: hello.py
examples/conflict-rocks/: deploy.sh  hello.py
examples/disasters/: README.md  hello.py  pyproject.toml
examples/earthquakes/: .gitignore  config.toml  demo.py  hello.py  preswald.toml
examples/english-premier-league/: hello.py
examples/f1-drivers/: README.md
examples/fastplotlib/: hello.py  preswald.toml
examples/fifa23/: hello.py  preprocess.py  pyproject.toml
examples/finance/: hello.py  preswald.toml  pyproject.toml
examples/fires/: README.md  hello.py  preswald.toml  pyproject.toml  secrets.toml
examples/health/: hello.py  preswald.toml
examples/iris/: hello.py  preswald.toml
examples/methane_emission_landfill/: README.md  hello.py  process.py
frontend/: .prettierrc  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
htmx-frontend/: .sesskey  client.py  main.py  run.py
landing/: index.html  style.css
my_project/: config.toml  hello.py
preswald/: __init__.py  build.py  celery_app.py  cli.py  components.py  connections_manager.py  core.py  data.py  deploy.py  llm.py  logging.py  main.py  plotly_utils.py  scriptrunner.py  serializer.py  server.py  state.py  themes.py  utils.py
preswald_project/: README.md  config.toml  demo.py  hello.py  secrets.toml
test/: hello.py
tests/: fastapi_test.html  pyodide_test.html  test_cli.py  test_components.py  test_core.py  test_data.py  test_ingestion.py  test_orchestration.py  test_server.py  test_transformations.py  test_visualization.py
tutorial/: README.md  hello.py  preswald.toml
(+458 files in other folders)
