[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice"
version = "0.1.0"
description = "A Preswald application"
requires-python = ">=3.8"
dependencies = [
    "preswald==0.1.38",
    "duckdb==1.1.3"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["."]